增加MySql问题的记录